# Printly

./: .dockerignore  .env.example  README.md  docker-compose.yml
Printly-backend/: .env.example  Dockerfile  entrypoint.sh  main.py  pyproject.toml
Printly-backend/alembic/: env.py
Printly-backend/alembic/versions/: 001032a769df_fix_admin_in_user_role_enum.py  03c9e694696e_add_invoices_table.py  07abe04b8a03_add_sides_per_page_column_and_fix_some_.py  162592038e8a_add_activation_codes.py  2211b82eb9de_edit_book_table_and_add_useful_columns.py  24195e9b62b0_add_idx_expenses_tenant_date_to_.py  48816dd0d313_remvove_customer_id_col_and_i_will_get_.py  595e0b450055_add_price_per_unit_to_materials.py  61a38d0473c7_add_phone_to_users.py  6b01bc339f9b_add_description_column_in_pricing_rules.py  906f5c52ee51_add_completed_at_col_to_order_table.py  9bf8f282323e_rename_col_from_type_to_notification_.py  a6b3adbe51bf_fix_enums_to_ensure_is_in_db.py  ab6a23931add_edit_type_name_in_material_transactions.py  b9dcc2a2cc52_remove_pricing_rules_and_customer_.py  ba0ec4469a30_transform_books_with_print_config_and_.py  c91cd909e2d1_add_balance_col_in_tenant_member_and_.py  c9723f955a4c_add_useful_index_to_order_table.py  cb61810312fd_initial_tables.py  (+4 more)
Printly-backend/app/: book_route.py  book_service.py
Printly-backend/app/db/: seed.py  (+23 more)
Printly-backend/tests/: conftest.py  test_activation_codes.py  test_auth.py  test_customer_portal.py  test_customers.py  test_dashboard.py  test_expenses.py  test_invoices.py  test_materials.py  test_notifications.py  test_orders.py  test_payments.py
(+224 files in other folders)
