[project]
name = "printly-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.12.1",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy>=2.0.49",
]
